--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,82 @@
-/* Compile your LESS file! */
+.coraltext {
+  color: #ff7f50;
+  font-size: 2.5rem;
+  font-family: tahoma;
+}
+html {
+  background-color: lightgray;
+}
+@media (max-width: 800px) {
+  display: flex;
+  flex-direction: column;
+}
+@media (max-width: 500px) {
+  display: flex;
+  flex-direction: column;
+}
+#container1 {
+  display: flex;
+  justify-content: center;
+  margin: 2rem;
+}
+#container1 nav {
+  background-color: black;
+  width: 100%;
+  position: fixed;
+  top: o;
+  text-align: center;
+}
+#container1 nav a {
+  margin: 2rem;
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: white;
+}
+#container1 nav a:hover {
+  color: #ff7f50;
+}
+#name {
+  text-align: center;
+  font-size: 5rem;
+  color: #ff7f50;
+  margin: 2rem;
+}
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFVZ0e.ttf) format('truetype');
+}
+#name h1 {
+  font-family: 'Open Sans', serif;
+  display: inline-block;
+}
+img {
+  width: 200px;
+  height: 300px;
+}
+#info {
+  text-align: center;
+  margin: 2rem;
+}
+#info p {
+  margin: 2rem;
+  display: inline-block;
+  font-size: 1.5rem;
+}
+#skilllist {
+  display: flex;
+  justify-content: space-around;
+  margin: 3rem;
+}
+#skilllist .skilltitle {
+  margin: 1.5rem;
+  text-decoration: underline;
+  font-size: 1.5rem;
+  color: #ff7f50;
+  font-size: 2.5rem;
+  font-family: tahoma;
+}
+#skilllist .skilltitle li {
+  margin: 1.5rem;
+}
