--- a/less/index.less
+++ b/less/index.less
@@ -1,59 +1,113 @@
-// Is this working?
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+
+
+
+@namecolor:#ff7f50 ;
+@namecolor2: #14c5bc
+
+.coraltext {
+	color: @namecolor;
+  font-size: 2.5rem;
+  font-family: tahoma;
+  }
+
+  
+
+html {
+	background-color: lightgray;
 }
 
-/* Set every element's box-sizing to border-box */
-* {
-    box-sizing: border-box;
+
+@media(max-width: 800px)
+{
+  display: flex;
+  flex-direction: column;
+  }
+
+  @media(max-width: 500px)
+{
+  display: flex;
+  flex-direction: column;
+  }
+
+  
+
+
+#container1 {
+  display: flex;
+  justify-content: center;
+   margin: 2rem;
+   
+   nav {
+	   background-color: black;
+	   width: 100%;
+	   position: fixed;
+	   top: o;
+	   text-align: center;
+   
+     a {
+  &:hover {
+    color: @namecolor;
+  }
+  margin: 2rem;
+  text-decoration: none;
+  font-size: 1.5rem;
+  color: white;
+}
+}
 }
 
-html, body {
-    height: 100%;
+
+#name {
+  text-align: center;
+  font-size: 5rem;
+  color: @namecolor;
+  margin: 2rem;
+  
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
+h1{
+   font-family: 'Open Sans',serif;
+   display: inline-block;
+  
+  
+  
+}
 }
 
+img {
+  width: 200px;
+  height: 300px;
+}
+
+#info {
+  text-align: center;
+  margin: 2rem;
+
+
+p {
+  
+  margin: 2rem;
+  display: inline-block;
+  font-size: 1.5rem;
+  
+}
+}
+
+#skilllist {
+  display:flex;
+  justify-content: space-around;
+  margin: 3rem;
+  
+  .skilltitle {
+    margin: 1.5rem;
+    text-decoration: underline;
+	  font-size: 1.5rem;
+    .coraltext;
+    
+  li {
+  margin: 1.5rem;
+  }
+  
+}
+}
